# TecFlix

./: CMakeLists.txt  README.md  main.cpp  movie_metadata.csv  sirve.csv  tecFlix
Archivo_csv/: lectura.cpp
Clases/: pelicula.cpp  pelicula.h
DesdeIMdB/: descarga.cpp  descarga.h  leerIMdB.cpp  leerIMdB.h
Grafica/: pagina.cpp  ventana.cpp  ventana.h  ventana2.cpp  ventana2.h
Lista/: list.cpp  list.h  node.cpp  node.h
Paginacion/: Pagina.cpp  Pagina.h  pagina.cpp
html/: Pagina_8cpp.html  Pagina_8cpp__incl.dot  Pagina_8cpp__incl.md5  Pagina_8cpp_source.html  Pagina_8h.html  Pagina_8h__dep__incl.dot  Pagina_8h__dep__incl.md5  Pagina_8h__incl.dot  Pagina_8h__incl.md5  Pagina_8h_source.html  annotated.html  classHTTPDownloader-members.html  classHTTPDownloader.html  classList-members.html  classList.html  classNode-members.html  classNode.html  classNode__coll__graph.dot  classNode__coll__graph.md5  classPagina-members.html  classPagina.html  classPagina__coll__graph.dot  classPagina__coll__graph.md5  classPelicula-members.html  classPelicula.html  classVentana-members.html  classVentana.html  classVentana2-members.html  classVentana2.html  classVentana2__coll__graph.dot  classVentana2__coll__graph.md5  classVentana2__inherit__graph.dot  classVentana2__inherit__graph.md5  classVentana__coll__graph.dot  classVentana__coll__graph.md5  classVentana__inherit__graph.dot  classVentana__inherit__graph.md5  classdescarga-members.html  classdescarga.html  classes.html  (+136 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+6 more)
